# TypeDough

./: .gitignore  Arch.txt  CMakeLists.txt  main.cpp
Core/: Arch.txt  Core.h  core.h  flowcontext.h  grapheditor.cpp  grapheditor.h  graphmanager.cpp  graphmanager.h  noderuntime.cpp  noderuntime.h
Core/Context/: flowcontext.cpp  flowcontext.h  noderuntime.cpp  noderuntime.h
Core/Input/: doughvalue.h
Core/Nodes/: AllNodes.h  NodeTypes.h  addnode.cpp  addnode.h  node.h
UI/: errorutility.h  graphview.cpp  graphview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodeitem.cpp  nodeitem.h  pinpoint.cpp  pinpoint.h  portitem.cpp  portitem.h  wireitem.cpp  wireitem.h
UI/Dialog/: pinpointdialog.cpp  pinpointdialog.h
UI/Items/: nodeitem.cpp  nodeitem.h  pinpointitem.cpp  pinpointitem.h  portitem.cpp  portitem.h  wireitem.cpp  wireitem.h
Window/: mainwindow.h  mainwindow.ui
